    should return the fall-through element ("second = result").  Reported by an
    anonymous user.
  * If the Special:Contributors URL is invoked without a contributor the error
    should be handled more gracefully.  Reported by Philip Whitehouse.
  * HTML entities using hex codes of the form "&#x26;" were being improperly
    escaped.  Reported by Constantine.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Hungarian translations (cstenkes).


1.1.4
=====

New Features:

  * None.

Bugfixes:

  * Image "alt" tag on image pages should not be "null".  Reported by justme.
  * The "File server URL" property was being ignored when generating image and
    file URLs.  Reported by justme.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated German translations (justme).
  * Updated Russian translations (cab).
  * Updated Russian translations (justme).


1.1.3
=====

New Features:

  * None.

Bugfixes:

  * Fix three instances where database connections were not being properly
    released.  Reported with extensive debugging help by Igor Zhuk.
  * For images that do not specify frame or thumb format the caption should be
    used as the alt and title tag.  Reported by Jun Fujikawa.

Translation Updates:

  * None.


1.1.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * "{{ns:}}" should return the same value as "{{ns:0}}" to match Mediawiki.

Translation Updates:

  * Updated Japanese translations (jfujikawa).
  * Updated Japanese translations (nattolover).
  * Updated Portugese (Brazilian) translations (leokury).
  * Updated Russian translations (shar).


1.1.1
=====

New Features:

  * None.

Bugfixes:

  * Merge all fixes from JAMWiki 1.0.7.
  * Heading text and wiki link text that starts with a list tag (example:
    "==#if==" or "[[Link|#text]]") was improperly being parsed as a list item.
  * Spring security 3.0 changed how logout redirection is handled.  Update